Fix home hero Credly badge line vertical alignment
Made-with: Cursor

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -264,15 +264,12 @@
   line-height: 1;
 }
 
+
 .home-hero__credly-badge {
   display: block;
   width: 22px;
   height: 22px;
   flex-shrink: 0;
-}
-
-.home-hero__credly-badge {
-  vertical-align: middle;
   border-radius: 3px;
 }
 
